Public/sass/variavel.scss
*{
    margin: 0;
    padding: 0;
}
body{
    @include mobile(){
        overflow-x: hidden;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        align-content: center;
        justify-content: space-around;
        align-items: center;
        
    }
}

header{
    width: $block_header_width;
    height: $block_header_heigth;
    nav{
        @include mobile(){
            width: 100%;
            height: 10%;
            list-style: none;
            display: flex;
            align-items: center;
            flex-wrap: nowrap;
            flex-direction: row;
            justify-content: center;
            align-content: center;
        }
        width: 100%;
        height: 13%;
        list-style: none;
        @include flex();
    }.icon_instagram{
        width: 40px;
        height: 40px;
        background-image: url(../icon/instagram.svg);
        background-position: center center;
        background-size: cover;
        background-repeat: no-repeat;
        margin-left: -566%;
        @include mobile(){
            display: none;
        }
    }li{
        margin: 0% 0% 0% 6%;
        @include li_header();
        @include mobile(){
            font-family: "DM Sans", sans-serif;
            font-style: normal;
            font-weight: 500;
            font-size: 16px;
            letter-spacing: 0.2em;
        }
    }
    .image{
        width: $width-image;
        height: $height_image;
        background: $image;
        margin: 0% 0% 0% 51%;
        @include position-image();
        @include mobile(){
            width: 100%;
            height: 42%;
            margin: 0% 0% 0% 0%;
        }
    }
}
/*iNFORMATION PAGE */
.information_the_page{
    width: 100%;
    height: 50%;
    @include flex-information()
}
#title_of_name_line_of_north{
    margin-top: -69%;
    display: inline-block;
    @include title-name-line-of-north();
    @include mobile(){
        margin-top: -256%;
        text-align: center;
    }
}
#image_of_short_of_section{
    width: 81vh;
    height: 81vh;
    position: absolute;
    transform: rotate(221deg);
    background: $six-image;
    @include position-image();
    @include mobile(){
        display: none;
    }
}
#title_one{
    margin-left: 10%;
    margin-top: -167%;
    position: absolute;
}
#title_two{
    position: absolute;
    margin-top: -104%;
    margin-left: 15%;
}
#title_three{
    position: absolute;
    margin-top: -36%;
    margin-left: 20%;
}
#title_four{
    position: absolute;
    margin-top: 42%;
    margin-left: 20%;
}
.number{
    position: absolute;
    margin-left: -20%;
    color: $four-color;
    @include number();
}
.text{
    @include font-class-text();
}
#second_product{
    @extend #first_products;
}
// FOOTER
footer{
    @include flex-of-page-about-and-product();
    width: 100%;
    height: 56vh;
    background: $first-color;
    .title_of_footer{
        @include text-footer-first();
    }
    .description_of_footer{
        margin-top: 20px;
        @include text-description();
    }
    .block_of_footer{
        width: 22%;
        height: 88%;
        line-height: 33px;
        
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        align-content: flex-start;
        align-items: flex-start;
    }
    .cart{
        cursor: pointer;
        width: 80%;
        height: 31%;
        margin: 39px 0px 0px 0px;
        background: url("../icon/BANCOS.png");
        @include position-image();
    }
    a{
        text-decoration: none;
        color: black;
    }
    .Instagram{
        @include text-social();
    }
    .Facebook{
        @include text-social();
    }
    .Youtube{
        @include text-social();
    }
    .Twitter{
        @include text-social();
    }
    .troca{
        @include text-social();
    }
    .entrega{
        @include text-social();
    }
    .pagament{
        @include text-social();
    }
    .cancelamento{
        @include text-social();
    }
    .compra{
        @include text-social();
    }
}

